Opened 14 years ago

Closed 14 years ago

#1804 closed defect (fixed)

avi decoding regression

Reported by: zzwcenter Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mpeg2video avi regression
Cc: donmoir@comcast.net Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:Transcode with ffmpeg0.9.2, Some ports of the output video was green. But ffmpeg0.8.2 is ok!
How to reproduce:

% ffmpeg -i /home//video_5056.avi -vcodec libx264 -s 176x144 -f mp4 -y /home/aaa.mp4

ffmpeg version 0.9.2, Copyright (c) 2000-2012 the FFmpeg developers
  built on Oct 11 2012 10:59:08 with gcc 4.3.4 [gcc-4_3-branch revision 152973]
  configuration: --prefix=../ --enable-memalign-hack --enable-shared --disable-static --disable-ffplay --disable-ffserver --enable-gpl --enable-libx264 --enable-libmp3lame --enable-libfaac --enable-libvpx --enable-libvorbis --enable-nonfree --extra-cflags=-I../include --extra-ldflags=-L../lib
  libavutil    51. 32. 0 / 51. 32. 0
  libavcodec   53. 42. 4 / 53. 42. 4
  libavformat  53. 24. 2 / 53. 24. 2
  libavdevice  53.  4. 0 / 53.  4. 0
  libavfilter   2. 53. 0 /  2. 53. 0
  libswscale    2.  1. 0 /  2.  1. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[avi @ 0x623760] non-interleaved AVI
[mpeg2video @ 0x629b40] mpeg_decode_postinit() failure
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] Warning MVs not available
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
Input #0, avi, from '/home/zhaoziwu/video/video_5056.avi':
  Metadata:
    encoder         : Matrox MQSink Filter For MPEG. Format: 4. Build: 2.0.0.267
  Duration: 00:01:21.28, start: 0.000000, bitrate: 25012 kb/s
    Stream #0:0: Video: mpeg2video (4:2:2) (MMES / 0x53454D4D), yuv422p, 720x576 [SAR 16:15 DAR 4:3], 25000 kb/s, 25 fps, 25 tbr, 25 tbn, 50 tbc
[buffer @ 0x62a720] w:720 h:576 pixfmt:yuv422p tb:1/1000000 sar:16/15 sws_param:
[scale @ 0x641820] w:720 h:576 fmt:yuv422p -> w:176 h:144 fmt:yuv422p flags:0x4
[libx264 @ 0x6406a0] using SAR=12/11
[libx264 @ 0x6406a0] using cpu capabilities: MMX2 SSE2Fast SSSE3 FastShuffle SSE4.2
[libx264 @ 0x6406a0] profile High 4:2:2, level 1.1, 4:2:2 8-bit
[libx264 @ 0x6406a0] 264 - core 125 - H.264/MPEG-4 AVC codec - Copyleft 2003-2012 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=6 lookahead_threads=1 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, mp4, to '/home/aaa.mp4':
  Metadata:
    encoder         : Lavf53.24.2
    Stream #0:0: Video: h264 (![0][0][0] / 0x0021), yuv422p, 176x144 [SAR 12:11 DAR 4:3], q=-1--1, 25 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (mpeg2video -> libx264)
Press [q] to stop, [?] for help
[mpeg2video @ 0x629b40] mpeg_decode_postinit() failure
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] Warning MVs not available
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ignoring pic after 100
[mpeg2video @ 0x629b40] warning: first frame is no keyframe
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] Warning MVs not available
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] Warning MVs not available
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 42 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 42 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
[mpeg2video @ 0x629b40] ac-tex damaged at 43 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
ac-tex damaged at 44 35
[mpeg2video @ 0x629b40] concealing 45 DC, 45 AC, 45 MV errors
frame=   40 fps=  0 q=-1.0 Lsize=      26kB time=00:00:01.52 bitrate= 138.2kbits/s dup=1 drop=0    
video:24kB audio:0kB global headers:0kB muxing overhead 5.169997%
[libx264 @ 0x6406a0] frame I:1     Avg QP:23.47  size:  5877
[libx264 @ 0x6406a0] frame P:18    Avg QP:25.93  size:   888
[libx264 @ 0x6406a0] frame B:21    Avg QP:30.42  size:   114
[libx264 @ 0x6406a0] consecutive B-frames:  7.5% 55.0% 37.5%  0.0%
[libx264 @ 0x6406a0] mb I  I16..4:  2.0% 33.3% 64.6%
[libx264 @ 0x6406a0] mb P  I16..4:  0.0%  0.2%  0.3%  P16..4: 46.5% 23.8% 16.0%  0.0%  0.0%    skip:13.1%
[libx264 @ 0x6406a0] mb B  I16..4:  0.0%  0.0%  0.0%  B16..8: 34.7%  3.7%  0.6%  direct: 1.6%  skip:59.4%  L0:41.4% L1:49.1% BI: 9.5%
[libx264 @ 0x6406a0] 8x8 transform intra:33.9% inter:46.5%
[libx264 @ 0x6406a0] coded y,uvDC,uvAC intra: 86.0% 100.0% 89.9% inter: 13.2% 29.9% 12.6%
[libx264 @ 0x6406a0] i16 v,h,dc,p:  0%  0%  0% 100%
[libx264 @ 0x6406a0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  9% 38%  9%  8%  5% 10%  6%  5%  9%
[libx264 @ 0x6406a0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 18% 39% 12%  4%  5%  6%  5%  4%  6%
[libx264 @ 0x6406a0] i8c dc,h,v,p: 45% 39% 10%  6%
[libx264 @ 0x6406a0] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 0x6406a0] ref P L0: 70.8% 10.0% 14.1%  5.1%
[libx264 @ 0x6406a0] ref B L0: 88.8%  8.4%  2.8%
[libx264 @ 0x6406a0] ref B L1: 90.8%  9.2%
[libx264 @ 0x6406a0] kb/s:121.29
Received signal 2: terminating.}}}

Attachments (1)

ticket_1804_trash_on_bottom.png (124.3 KB ) - added by DonMoir 14 years ago.

Download all attachments as: .zip

Change History (18)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: ac-tex damaged removed
Priority: normalimportant

Please provide the input file.

comment:2 by zzwcenter, 14 years ago

The input file is too big. (200M) So could you provide a different method of uploading. Thank you!

comment:3 by Carl Eugen Hoyos, 14 years ago

Please see http://ffmpeg.org/bugreports.html (there is no hard filesize limit)

comment:4 by Carl Eugen Hoyos, 14 years ago

The sample you uploaded is 691200 bytes long, FFmpeg decodes two frames (this does not match your console output above), both frames are not green. I tested both 0.9.2 (with your exact command line) and current git head.

Please reopen the ticket if you can provide a failing sample.

comment:5 by Carl Eugen Hoyos, 14 years ago

Resolution: needs_more_info
Status: newclosed

comment:6 by zzwcenter, 14 years ago

Resolution: needs_more_info
Status: closedreopened

in reply to:  4 comment:7 by zzwcenter, 14 years ago

Replying to cehoyos:

The sample you uploaded is 691200 bytes long, FFmpeg decodes two frames (this does not match your console output above), both frames are not green. I tested both 0.9.2 (with your exact command line) and current git head.

Please reopen the ticket if you can provide a failing sample.

I upload the file again, but failed(only uploading 111935488 long). The name of new sample is "Ticket #1804 _mpeg2vido_Transcode with ffmpeg0.9.2, Some ports of the output video was green. But ffmpeg0.8.2 is ok.avi", please try again!

comment:8 by Carl Eugen Hoyos, 14 years ago

You uploaded a file of size 111747613.
If I understand your original report correctly, your problem is that transcoding works with FFmpeg 0.8.2, but does not work with FFmpeg 0.9.2 (is that correct?) - since the file you uploaded does not work for me at all (neither with FFmpeg git head, nor 0.8.2, nor MPlayer, nor vlc), please provide your working command line together with complete, uncut console output for a working FFmpeg version (0.8.2 or any other version that works for you). Please also add something like "md5sum your_input_file" together with its output to make absolutely sure we are testing the same sample.

comment:9 by zzwcenter, 14 years ago

The sample file is divided into 8 parts compressed by the WinRAR。The compressed filelist:Ticket #1804 _mpeg2vido_8parts.part01.rar, Ticket #1804 _mpeg2vido_8parts.part02.rar, Ticket #1804 _mpeg2vido_8parts.part03_new3.rar, Ticket #1804 _mpeg2vido_8parts.part04.rar, Ticket #1804 _mpeg2vido_8parts.part05.rar, Ticket #1804 _mpeg2vido_8parts.part06_new4.rar, Ticket #1804 _mpeg2vido_8parts.part07.rar, Ticket #1804 _mpeg2vido_8parts.part08.rar。
Other similar files for example "Ticket #1804 _mpeg2vido_8parts.part03_new.rar" are damaged when uploading to server. Download the eight files in the compressed filelist, please rename the file from "Ticket #1804 _mpeg2vido_8parts.part03_new3.rar" to "Ticket #1804 _mpeg2vido_8parts.part03.rar", and from "Ticket #1804 _mpeg2vido_8parts.part06_new4.rar" to "Ticket #1804 _mpeg2vido_8parts.part06.rar", then extract the files by the WinRAR。
Transcoded the sample file with ffmpeg 0.10.4 and ffmpeg 0.9.2, there are some errors at the bottom of some video frames when playing the output file by vlc. But output file is ok with ffmpeg 0.8.2. The working command line is "ffmpeg -i /home/sample_file.avi -vcodec libx264 -s 176x144 -f mp4 -y /home/output.mp4". Thank you!

comment:10 by zzwcenter, 14 years ago

An incorrect picture "Ticket #1804 _mpeg2vido_outfile_error.png" is uploaded to " upload.ffmpeg.org". There are some errors at the bottom of some pictures when playing the output file by vlc.

comment:11 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavformat
Keywords: avi regression added
Reproduced by developer: set
Status: reopenedopen
Summary: Transcode with ffmpeg0.9.2, Some ports of the output video was green. But ffmpeg0.8.2 is ok!avi decoding regression
Version: 0.9.2git-master

Regression since cbfdfbe / d3f610c

comment:13 by zzwcenter, 14 years ago

The same problem exists when transcoding works with FFmpeg 0.10.4

comment:14 by DonMoir, 14 years ago

During normal playback, there is always trash on the bottom through out the video. Happens with ffplay, my own player, etc. Doesn't happen with other players tested.

It doesn't appear to be a conversion problem from 422p to some other format but source bytes appear to be bad.

See ticket_1804_trash_on_bottom.png

The width and height appear to be correct. I tested it with no scaling, color conversion, and output via YUY2 with no color conversion. All results were the same with trash.

Last edited 14 years ago by DonMoir (previous) (diff)

by DonMoir, 14 years ago

comment:15 by DonMoir, 14 years ago

Cc: donmoir@comcast.net added

comment:16 by zzwcenter, 14 years ago

When will this problem be solved?

comment:17 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.